# cfs

./: .gitignore  Cargo.toml  LICENSE  README.md  devenv.nix  devenv.yaml
src/: actions.rs  commands.rs  config.rs  error.rs  flags.rs  json_object.rs  main.rs
src/storage/: json.rs  mod.rs  value.rs
src/storage/sqlite/: mod.rs  schema.sql
