[package]
name = "cfs"
authors = ["Marla Albuquerque <marla@albuque.com>"]
description = "local key-value store for shell scripts"
version = "1.0.1"
edition = "2021"
license-file = "LICENSE"
homepage = "https://github.com/voidcoefficient/cfs"
repository = "https://github.com/voidcoefficient/cfs"
keywords = ["cli", "shell-tool", "shell"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
json = "0.12.4"
rusqlite = { version = "0.39.0", features = ["bundled"] }
seahorse = "2.1.0"
